deployment_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiki-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wiki-app
  template:
    metadata:
      labels:
        app: wiki-app
    spec:
      containers:
        - name: wiki-app
          image: pfa123/pfa2.0:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: wiki-app
spec:
  selector:
    app: wiki-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      #nodePort: 31500
